<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">ShareTrip</string>
    <string name="get_started">Get started</string>
    <string name="onboarding_trip_title">Play &amp; Win Trip Coin</string>
    <string name="onboarding_trip_subtitle">Sign up to enjoy amazing offers</string>
    <string name="onboarding_coin_title">Book More Earn More</string>
    <string name="onboarding_coin_subtitle">Enjoy more Trip Coin through booking</string>
    <string name="onboarding_book_title">Booking is Now Easy</string>
    <string name="onboarding_book_subtitle">Sign up to enjoy amazing offers</string>
    <string name="next">Next</string>
    <string name="enter_email_address">Enter email address</string>
    <string name="skip">Skip</string>
    <string name="back">Back</string>
    <string name="enter_password">Enter Password</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="create_new_account">Create New Account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="mobile_number_optional">Mobile Number</string>
    <string name="home">Home</string>
    <string name="booking">Booking</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="support_center">Support Center</string>
    <string name="contact_us">Contact Us</string>
    <string name="about_us">About Us</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="flights">Flight</string>
    <string name="hotels">Hotel</string>
    <string name="title_hotels">Hotels</string>
    <string name="transfer">Transfer</string>
    <string name="tours">Tour</string>
    <string name="departure_date">Departure Date</string>
    <string name="return_date">Return Date</string>
    <string name="travelers_and_class">Travelers &amp; Class</string>
    <string name="search_flights">Search Flights</string>
    <string name="round_trip">ROUND-TRIP</string>
    <string name="one_way">One Way</string>
    <string name="multi_city">Multi-City</string>
    <string name="origin_city_or_Airport">Origin City or Airport</string>
    <string name="destination_city_or_airport">Destination City or Airport</string>
    <string name="adult_12_years">Adult</string>
    <string name="children_2_12_yrs">Children</string>
    <string name="children_2_12">Children</string>
    <string name="infants_0_2_yrs">Infants</string>
    <string name="_classes">Class</string>
    <string name="title_fragment_travellers_and_class">Travellers and Class</string>
    <string name="title_activity_flights">Flight</string>
    <string name="apply">Apply</string>
    <string name="select_date">Select Date</string>
    <string name="book_now">Book now</string>
    <string name="total_airfare">Total Airfare</string>
    <string name="discount">Discount</string>
    <string name="total_payable">Total Payable</string>
    <string name="air_fare_rules">Air Fare Rules</string>
    <string name="baggage">Baggage</string>
    <string name="fare_details">Fare Details</string>
    <string name="title_activity_flight_checkout">Checkout</string>
    <string name="travelers_details">Traveler\'s Information</string>
    <string name="_continue">continue</string>
    <string name="adult_number">Adult %d</string>
    <string name="adult_number_Primary">Adult %d (Primary)</string>
    <string name="children__number">Children %d</string>
    <string name="infants__number">Infants %d</string>
    <string name="required">*Required</string>
    <string name="title">Title</string>
    <string name="given_name">Given Name</string>
    <string name="given_name_with_details">Given Name (First &amp; Middle Name)*</string>
    <string name="sur_name">Sur Name</string>
    <string name="sur_name_details">Surname (Last Name)*</string>
    <string name="birth_day">Birth Day</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email </string>
    <string name="address">Address</string>
    <string name="nationality">Nationality </string>
    <string name="passport_number">Passport Number</string>
    <string name="passport_expire_date">Passport Expire Date</string>
    <string name="coupon">Coupon</string>
    <string name="cancellation_policy">Cancellation Policy</string>
    <string name="pricing_information">Pricing Information</string>
    <string name="date">Date</string>
    <string name="remove">Remove</string>
    <string name="view_on_map">View on Map</string>
    <string name="reserve">Reserve</string>
    <string name="travellers">Travellers</string>
    <string name="please_wait">Please wait</string>
    <string name="error_booking_declined">Booking Declined!</string>
    <string name="error_payment_fail">Don’t worry.\nPlease enter all your valid data and try again.</string>
    <string name="cancel">Cancel</string>
    <string name="booking_succeed">Booking Succeed!</string>
    <string name="thank_you_for_booking_the_ticket">Thank you for booking\nthe ticket</string>
    <string name="see_all">See All</string>
    <string name="contact_name">Contact name</string>
    <string name="details">Details</string>
    <string name="retry">Retry</string>
    <string name="itinerary">Itinerary</string>
    <string name="special_notes">Special Notes</string>
    <string name="tax">Tax</string>
    <string name="general_conditions">General Conditions</string>
    <string name="contact_information">Contact Information</string>
    <string name="add_city">Add city</string>
    <string name="airport">Airport</string>
    <string name="flying_from">Flying from</string>
    <string name="flying_to">Flying to</string>
    <string name="price_inclusive_of_vat_tax">*Price inclusive of VAT &amp; Tax</string>
    <string name="flights_found">%d Flights Found</string>
    <string name="reset_password">Reset password</string>
    <string name="login_with_email">LOGIN WITH EMAIL</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="redeem_coin">Redeem Coins</string>
    <string name="redeem_coupon">Redeem Coupon</string>
    <string name="card_prefix">Card Prefix</string>
    <string name="travellers_information">Travellers Information</string>
    <string name="edit_profile_new">Edit Profile</string>
    <string name="refer_amp_earn"><![CDATA[Refer & Earn]]></string>
    <string name="saved_cards">Saved Cards</string>
    <string name="change_password">Change Password</string>
    <string name="leader_board">Leader Board</string>
    <string name="reward">Rewards</string>
    <string name="logout">Logout</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email_address">Email Address</string>
    <string name="passport_expiry_date">Passport Expiry Date</string>
    <string name="enter_old_password">Enter old password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="update_password">Update Password</string>
    <string name="expiring_in">Expiring in</string>
    <string name="pending_tripcoins">Pending TripCoins</string>
    <string name="expiring_60_days">Expiring in 60 Days</string>
    <string name="invite_text_friend">When your friend uses the referral and register you’ll get the Trip Coins. Invite more friends &amp; earn more Trip Coins.</string>
    <string name="your_invite_code">Your invite code</string>
    <string name="invite_friend">INVITE FRIENDS</string>
    <string name="BDT">BDT</string>
    <string name="faq">FAQ</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="title_activity_tour_history_list">Tour History</string>
    <string name="title_activity_hotel_booking">Hotel</string>
    <string name="title_activity_flight_history">Flight History</string>
    <string name="travel_date">Travel Date</string>
    <string name="time">Time</string>
    <string name="tour_information">Tour Information</string>
    <string name="holiday_history">Holiday History</string>
    <string name="loading">loading...</string>
    <string name="choose_date">Choose Date</string>
    <string name="search_city_or_destination">Search By Destinations</string>
    <string name="trips_in_popular_cities">Trips in popular Cities</string>
    <string name="text_oh_no">Oh no!</string>
    <string name="no_internet_found_check_connectivity">No internet found. Check connectivity.</string>
    <string name="favourite_guest_lists">Favourite Guest List</string>
    <string name="total_amount">Total Amount</string>
    <string name="pay_now">Pay Now</string>
    <string name="back_to_search">Back to search</string>
    <string name="check_in_check_out_date">Check In - Check Out Date</string>
    <string name="pricing_details">Pricing Details</string>
    <string name="transport_name">Transport Name (Ex. Bangladesh Biman)</string>
    <string name="code">Code (Ex. BG-701)</string>
    <string name="final_price">Final Price</string>
    <string name="discount_amount">Discount Amount</string>
    <string name="price_per_single_person">Price Per Person Single:</string>
    <string name="price_per_double_person">Price Per Person Double:</string>
    <string name="price_per_person_twin">Price Per Person Twin:</string>
    <string name="price_per_person_triple">Price Per Person Triple:</string>
    <string name="price_per_person_quad_">Price Per Person Quad:</string>
    <string name="price_per_child_3_5">Price Per Child 3 To 6:</string>
    <string name="price_per_child_7_12_">Price Per Child 7 To 12:</string>
    <string name="price_per_infant">Price Per Infant:</string>
    <string name="referral_msg">Hi, check out the ShareTrip App! The easiest way to book all your travel services! Use my referral code %1$s and also win air tickets and many more. Click to download ShareTrip app now http://bit.ly/stappinc</string>
    <string name="referral_msg_other">Hi, check out the new ShareTrip App! The easiest way to book all your travel services! You can also win  air tickets and many more. Click to download ShareTrip app now http://bit.ly/stappinc</string>
    <string name="fb_app_name">ShareTrip</string>
    <string name="facebook_app_id">575994546140179</string>
    <string name="fb_login_protocol_scheme">fb575994546140179</string>
    <string name="common_faq">Common Overview</string>
    <string name="flight_faq">Flight</string>
    <string name="hotel_faq">Hotel</string>
    <string name="holiday_faq">Holiday</string>
    <string name="tour_faq">Tour</string>
    <string name="transfer_faq">Transfer</string>
    <string name="trip_coin_faq">Trip coin</string>
    <string name="travel_trivia">Travel Trivia</string>
    <string name="blog">Blog</string>
    <string name="deals">Deals</string>
    <string name="departure">Departure</string>
    <string name="boarding">Boarding</string>
    <string name="onwards">Onwards</string>
    <string name="dropping">Dropping</string>
    <string name="arrive">Arrive</string>
    <string name="seats">Seats</string>
    <string name="bus_type">Bus Type</string>
    <string name="bus_service_Hanif_Enterprize">Hanif Enterprize</string>
    <string name="boarding_counter">Kolabagan</string>
    <string name="droping_counter">Dampara</string>
    <string name="dhk_ctg_d">31-DHK-CTG (D)</string>
    <string name="journey">Journey</string>
    <string name="time_value_1">11:30 PM</string>
    <string name="time_value_2">05:30 AM</string>
    <string name="date_value">20 Oct 2021</string>
    <string name="seats_value">A4, B4, C4, C5</string>
    <string name="bus_type_value">AC</string>
</resources>