<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_home"
        android:icon="@drawable/ic_home_white_24dp"
        android:title="@string/home" />
    <item
        android:id="@+id/action_booking"
        android:icon="@drawable/ic_booking_white_24dp"
        android:title="@string/booking" />

    <item
        android:id="@+id/action_notification"
        android:icon="@drawable/ic_deal_mono"
        android:title="@string/deals" />

    <item
        android:id="@+id/action_blog"
        android:icon="@drawable/ic_blog_mono"
        android:title="@string/blog" />

    <item
        android:id="@+id/action_profile"
        android:icon="@drawable/ic_profile_light_24dp"
        android:title="@string/profile" />
</menu>