<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="net.sharetrip.profile.view.faq.FaqViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".profile.view.faq.FaqFragment">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/faq_overall"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="@dimen/line_divider_size"
            android:background="@color/windowBackground"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/spacing_normal"
            android:paddingRight="@dimen/spacing_normal"
            app:drawableRightCompat="@drawable/ic_navigate_next_24dp"
            android:drawableTint="@color/colorPrimary"
            android:textSize="16sp"
            android:fontFamily="sans-serif"
            android:textColor="@color/black_87"
            android:onClick="@{() -> viewModel.onclickCommonOverViewFaq()}"
            android:text="@string/common_faq" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/faq_flight"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="@dimen/line_divider_size"
            android:background="@color/windowBackground"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/spacing_normal"
            android:paddingRight="@dimen/spacing_normal"
            app:drawableRightCompat="@drawable/ic_navigate_next_24dp"
            android:drawableTint="@color/colorPrimary"
            android:textSize="16sp"
            android:fontFamily="sans-serif"
            android:textColor="@color/black_87"
            android:onClick="@{() -> viewModel.onclickFlightFaq()}"
            android:text="@string/flight_faq" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/faq_hotel"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="@dimen/line_divider_size"
            android:background="@color/windowBackground"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/spacing_normal"
            android:paddingRight="@dimen/spacing_normal"
            app:drawableRightCompat="@drawable/ic_navigate_next_24dp"
            android:drawableTint="@color/colorPrimary"
            android:textSize="16sp"
            android:fontFamily="sans-serif"
            android:textColor="@color/black_87"
            android:onClick="@{() -> viewModel.onclickHotelFaq()}"
            android:text="@string/hotel_faq" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/faq_holiday"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="@dimen/line_divider_size"
            android:background="@color/windowBackground"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/spacing_normal"
            android:paddingRight="@dimen/spacing_normal"
            app:drawableRightCompat="@drawable/ic_navigate_next_24dp"
            android:drawableTint="@color/colorPrimary"
            android:textSize="16sp"
            android:fontFamily="sans-serif"
            android:textColor="@color/black_87"
            android:onClick="@{() -> viewModel.onclickHolidayFaq()}"
            android:text="@string/holiday_faq" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/faq_tour"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="@dimen/line_divider_size"
            android:background="@color/windowBackground"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/spacing_normal"
            android:paddingRight="@dimen/spacing_normal"
            android:visibility="gone"
            app:drawableRightCompat="@drawable/ic_navigate_next_24dp"
            android:drawableTint="@color/colorPrimary"
            android:textSize="16sp"
            android:fontFamily="sans-serif"
            android:textColor="@color/black_87"
            android:onClick="@{() -> viewModel.onclickTourFaq()}"
            android:text="@string/tour_faq" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/faq_transfer"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:visibility="gone"
            android:layout_marginTop="@dimen/line_divider_size"
            android:background="@color/windowBackground"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/spacing_normal"
            android:paddingRight="@dimen/spacing_normal"
            app:drawableRightCompat="@drawable/ic_navigate_next_24dp"
            android:drawableTint="@color/colorPrimary"
            android:textSize="16sp"
            android:fontFamily="sans-serif"
            android:textColor="@color/black_87"
            android:onClick="@{() -> viewModel.onclickTransferFaq()}"
            android:text="@string/transfer_faq" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/faq_tripcoin"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="@dimen/line_divider_size"
            android:background="@color/windowBackground"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/spacing_normal"
            android:paddingRight="@dimen/spacing_normal"
            app:drawableRightCompat="@drawable/ic_navigate_next_24dp"
            android:drawableTint="@color/colorPrimary"
            android:textSize="16sp"
            android:fontFamily="sans-serif"
            android:textColor="@color/black_87"
            android:onClick="@{() -> viewModel.onclickTripCoinFaq()}"
            android:text="@string/trip_coin_faq" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/faq_travel_trivia"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="@dimen/line_divider_size"
            android:visibility="visible"
            android:background="@color/windowBackground"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/spacing_normal"
            android:paddingRight="@dimen/spacing_normal"
            app:drawableRightCompat="@drawable/ic_navigate_next_24dp"
            android:drawableTint="@color/colorPrimary"
            android:textSize="16sp"
            android:fontFamily="sans-serif"
            android:textColor="@color/black_87"
            android:onClick="@{() -> viewModel.onclickTravelTriviaFaq()}"
            android:text="@string/travel_trivia" />

    </LinearLayout>

</layout>